--- a/res/app.json
+++ b/res/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/customTabBar/customTabBar",
-    "pages/customNavCell/customNavCell"
+    "pages/customNavCell/customNavCell",
+    "pages/customlistCard/customlistCard"
   ],
   "window": {
     "backgroundTextStyle": "light",
